fix: Drop z-index on Link field arrow

--- a/frappe/public/scss/common/controls.scss
+++ b/frappe/public/scss/common/controls.scss
@@ -197,7 +197,7 @@ select.form-control {
 	.link-btn {
 		// @dokos
 		position: absolute;
-		z-index: 3;
+		// z-index: 3;
 		top: 0px;
 		right: 0px;
 		bottom: 0px;
